# cli-ide

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cli_ide/: __init__.py  app.py  exceptions.py  utils.py
cli_ide/config/: __init__.py  defaults.py  settings.py
cli_ide/models/: __init__.py  state.py
cli_ide/themes/: __init__.py  light.py
cli_ide/widgets/: __init__.py  dialogs.py  editor.py  file_tree.py  search.py  terminal.py
docs/: api.md
tests/: __init__.py  test_config.py  test_models.py  test_utils.py
website/: index.html  main-ascii.js  main-particles.js  main-terrain.js  main.js  preview.html  style.css
